Add some padding for mobile

--- a/web/static/choose.css
+++ b/web/static/choose.css
@@ -57,9 +57,10 @@ body {
     flex-direction: column;
 }
 
-.container {
+body > .container {
     max-width: 35rem;
     margin: 0 auto 4rem;
+    padding: 0 1rem;
 }
 
 header {
