Warn of non-S256 PKCE on choose page

--- a/web/static/choose.css
+++ b/web/static/choose.css
@@ -111,7 +111,16 @@ strong {
     margin: 1.3rem 0;
     padding: .6rem 1rem;
     border-radius: .2rem;
+    color: rgb(55, 12, 12);
     background: rgba(255, 59, 93, .1);
+}
+
+.warning-msg {
+    margin: 1.3rem 0;
+    padding: .6rem 1rem;
+    border-radius: .2rem;
+    color: rgb(89, 55, 23);
+    background: rgba(255, 188, 59, .1);
 }
 
 a {
