--- a/web/static/welcome.css
+++ b/web/static/welcome.css
@@ -2,7 +2,6 @@
          v2.0 | 20110126
          License: none (public domain)
 */
-
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -46,10 +45,71 @@ table {
 	  border-collapse: collapse;
 	  border-spacing: 0;
 }
-
 button, input, select, textarea {
-  font-family : inherit;
-  font-size   : 100%;
+  font-family: inherit;
+  font-size: 100%;
+}
+
+/* https://projects.lukehaas.me/css-loaders/ */
+.loader,
+.loader:before,
+.loader:after {
+    border-radius: 50%;
+    width: 2.5em;
+    height: 2.5em;
+    -webkit-animation-fill-mode: both;
+    animation-fill-mode: both;
+    -webkit-animation: load7 1.8s infinite ease-in-out;
+    animation: load7 1.8s infinite ease-in-out;
+}
+.loader {
+    color: #666666;
+    font-size: 10px;
+    margin: 80px auto;
+    position: relative;
+    text-indent: -9999em;
+    -webkit-transform: translateZ(0);
+    -ms-transform: translateZ(0);
+    transform: translateZ(0);
+    -webkit-animation-delay: -0.16s;
+    animation-delay: -0.16s;
+}
+.loader:before,
+.loader:after {
+    content: '';
+    position: absolute;
+    top: 0;
+}
+.loader:before {
+    left: -3.5em;
+    -webkit-animation-delay: -0.32s;
+    animation-delay: -0.32s;
+}
+.loader:after {
+    left: 3.5em;
+}
+@-webkit-keyframes load7 {
+    0%,
+    80%,
+    100% {
+        box-shadow: 0 2.5em 0 -1.3em;
+    }
+    40% {
+        box-shadow: 0 2.5em 0 0;
+    }
+}
+@keyframes load7 {
+    0%,
+    80%,
+    100% {
+        box-shadow: 0 2.5em 0 -1.3em;
+    }
+    40% {
+        box-shadow: 0 2.5em 0 0;
+    }
+}
+.loader.hide {
+    display: none;
 }
 
 /* start */
@@ -58,35 +118,61 @@ button, input, select, textarea {
     padding: 0;
 }
 
+html, body {
+    height: 100%;
+}
+
 body {
     font: 18px/1.3 BlinkMacSystemFont, -apple-system, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
+}
+
+.flex-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.flex-fill {
+    flex: 1;
 }
 
 footer {
     font-size: .9rem;
     text-align: center;
-    padding: 2rem 0 3rem;
+    margin: 3rem 0 0rem;
+    font-size: .8rem;
+    color: #666;
 }
 
-header {
+footer code {
+    font-size: .8rem;
+}
+
+footer a {
+    color: #666;
+    border: none;
+    text-decoration: underline;
+}
+
+footer a:hover {
+    color: black;
+}
+
+.hero, .navbar {
     background: rgb(240, 240, 240);
     border-bottom: 1px solid rgb(210, 210, 210);
 }
 
-header h1 {
+.hero h1, .navbar h1 {
     font-weight: bold;
     font-family: monospace;
 }
 
-header .me {
+.navbar > .container > div > :not(:last-child) {
     margin-right: 1rem;
 }
 
-header form {
-    display: inline-block;
-}
-
-header .container {
+.hero .container, .navbar .container {
     display: flex;
     justify-content: space-between;
 }
@@ -134,6 +220,30 @@ table td {
 .hero form {
     display: flex;
     justify-content: center;
+}
+
+.client {
+    border-bottom: 1px solid #ccc;
+    margin: 0 0 1.3rem 0;
+    padding: 1.3rem 0;
+}
+
+.client h1 {
+    font-size: 1.5rem;
+    font-weight: bold;
+}
+
+.client h2 {
+    font-size: 1.2rem;
+    color: #666;
+}
+
+.scope {
+    margin-left: 1rem;
+}
+
+.scope + .scope {
+    margin-left: .5rem;
 }
 
 .field {
@@ -184,7 +294,11 @@ pre {
 code {
     font: .9rem/1.3 monospace;
 }
-strong { font-weight: bold; }
+
+strong {
+    font-weight: bold;
+}
+
 dl {
     margin-top: 1rem;
 }
@@ -261,3 +375,84 @@ input[type=url] + button {
     display: block;
 }
 
+
+a {
+    color: rgb(54, 93, 169);
+    text-decoration: none;
+    border-bottom: 1px solid rgb(54, 93, 169);
+}
+
+a:hover {
+    color: rgb(42, 100, 151);
+    border-color: rgb(42, 100, 151);
+}
+
+a.btn {
+    border: 1px solid;
+    padding: .3rem .5rem;
+    border-radius: .2rem;
+    background: rgba(54, 93, 169, .1);
+    border-color: rgba(54, 93, 169, .2);
+}
+
+a.btn:hover {
+    background: rgba(42, 100, 151, .1);
+    border-color: rgba(42, 100, 151, .5);
+}
+
+.center {
+    display: flex;
+    justify-content: center;
+}
+
+.block {
+    display: block;
+}
+
+.inline-block {
+    display: inline-block;
+}
+
+.info {
+    font-style: italic;
+    margin: 2.6rem 0;
+}
+
+.info.loading {
+    display: none;
+}
+
+textarea {
+    display: block;
+    width: 100%;
+    margin: 1rem 0;
+}
+
+.error-msg {
+    margin: 1.3rem 0;
+    padding: .6rem 1rem;
+    border-radius: .2rem;
+    color: rgb(55, 12, 12);
+    background: rgba(255, 59, 93, .1);
+}
+
+.warning-msg {
+    margin: 1.3rem 0;
+    padding: .6rem 1rem;
+    border-radius: .2rem;
+    color: rgb(89, 55, 23);
+    background: rgba(255, 188, 59, .1);
+}
+
+ul.methods {
+    padding-left: 1rem;
+    list-style: none;
+}
+
+ul.methods li {
+    margin: 1.3rem 0;
+}
+
+li.error, li.unsupported {
+    color: silver;
+}
