--- a/web/static/welcome.css
+++ b/web/static/welcome.css
@@ -280,7 +280,7 @@ section h2 {
     margin: 2rem -1rem 1rem;
 }
 section h3 {
-    margin: 1rem 0;
+    margin: 1.3rem 0 1rem;
     font-weight: bold;
 }
 
